[package]
name = "pallet-proposals"
authors = ['Imbue <https://github.com/ImbueNetwork>']
description = "Proposals pallet is used for creating on chain funding propositions"
version = '3.0.0'
license = 'Apache 2.0'
homepage = 'https://substrate.dev'
repository = "https://github.com/ImbueNetwork/imbue"
edition = '2018'
resolver = "2"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", default-features=false}
lite-json = {version="0.1.3", default-features=false, defaults=["no_std"]}
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
integer-sqrt = { version = '0.1.5', default-features = false }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" , default-features = false }

cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" , default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }

xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39", default-features = false }
#kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }

pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.39" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.39", default-features = false }
orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.39" }

# Local Dependencies
common-traits = { path = "../../libs/common-traits", default-features = false }
common-types = { path = "../../libs/common-types", default-features = false }

[dev-dependencies]
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.39"}
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.39"}
orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.39" }
serde = { version = "1.0.101" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39"}
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39"}
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39"}
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39"}
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39"}
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39"}

[features]
default = ['std']
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks", "pallet-xcm/runtime-benchmarks"]
std = [
	"codec/std",
	"serde/std",
	"hex/std",
	"lite-json/std",
	'frame-benchmarking/std',
	'frame-support/std',
	'frame-system/std',
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"cumulus-pallet-xcm/std",
	"cumulus-primitives-core/std",
	"pallet-timestamp/std",
	"pallet-balances/std",
	"pallet-identity/std",
	"xcm/std",
	"common-types/std",
    "orml-xtokens/std",
	"pallet-xcm/std"
]
