[package]
name = "pallet-proposals"
description = "Proposals pallet is used for creating on chain funding propositions"
version = '3.1.0'
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", default-features=false}
lite-json = {version="0.1.3", default-features=false, defaults=["no_std"]}
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
integer-sqrt = { version = '0.1.5', default-features = false }
log = { version = "0.4.17", default-features = false }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43" , default-features = false }

cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43" , default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false, optional = true }

xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43", default-features = false }

pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.43" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.43", default-features = false }
orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.43" }

# Local Dependencies
common-traits = { path = "../../libs/common-traits", default-features = false }
common-types = { path = "../../libs/common-types", default-features = false }
pallet-deposits = { path = "../deposits", default-features = false }

[dev-dependencies]
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.43"}
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.43"}
orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.43" }
serde = { version = "1.0.101" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43"}
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43"}
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43"}
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43"}
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43"}
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43"}
common-runtime = { path = "../../runtime/common"}

[features]
default = ['std']
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks", "pallet-xcm/runtime-benchmarks",	"common-runtime/runtime-benchmarks"]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
	"common-runtime/try-runtime",
	"common-traits/try-runtime",
	"common-types/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"frame-executive?/try-runtime",
	"orml-currencies/try-runtime",
	"orml-tokens/try-runtime",
	"orml-xtokens/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-deposits/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-xcm/try-runtime"
]

std = [
	"codec/std",
	"serde/std",
	"hex/std",
	"lite-json/std",
	'frame-benchmarking/std',
	'frame-support/std',
	'frame-system/std',
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"cumulus-pallet-xcm/std",
	"cumulus-primitives-core/std",
	"pallet-timestamp/std",
	"pallet-balances/std",
	"pallet-identity/std",
	"xcm/std",
	"common-types/std",
	"common-runtime/std",
	"orml-xtokens/std",
	"pallet-xcm/std",
]
