[package]
name = 'common-runtime'
homepage = 'https://imbue.network'
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive'] }
serde = { version = "1.0.102", optional = true }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
smallvec = "1.4.0"

## Substrate FRAME Dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate" , branch = "polkadot-v0.9.43",  default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate" , branch = "polkadot-v0.9.43",  default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate" , branch = "polkadot-v0.9.43",  default-features = false }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43", optional = true }
frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43", optional = true }

## Substrate Primitive Dependencies
sp-arithmetic = { git = "https://github.com/paritytech/substrate" , branch = "polkadot-v0.9.43",  default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }

polkadot-primitives = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.43" }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43", default-features = false }

#Cumulus
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43"  , default-features = false }

# Local Dependencies
common-traits = { path = "../../libs/common-traits", default-features = false }
common-types = { path = "../../libs/common-types", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.43" }

[dev-dependencies]
hex-literal = "0.3.1"
hex = "0.4.3"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }

[features]
 	default = ['std']
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
	"common-traits/try-runtime",
	"common-types/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime"
]
std = [
	"serde/std",
    "codec/std",
	'cumulus-primitives-core/std',
	'frame-support/std',
	'frame-system/std',
	'sp-core/std',
	'sp-consensus-aura/std',
	'sp-runtime/std',
	'sp-std/std',
	"common-traits/std",
	"common-types/std",
	"orml-traits/std",
	"polkadot-primitives/std",
	"pallet-balances/std",
	"xcm/std",
]
runtime-benchmarks = [
	'frame-support/runtime-benchmarks',
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
]
